# agentic-automation-platform

./: .env.example  README.md  pyproject.toml
agentic_platform/: run.py  tracing.py
agentic_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agentic_platform/agent/: __init__.py  loop.py  prompt.py  schemas.py
agentic_platform/data/: api_catalog.json
agentic_platform/llm/: __init__.py  base.py  ollama.py
agentic_platform/tools/: __init__.py  api_catalog.py  http.py
agentic_platform/utils/: json_io.py  time.py
